# G2G

./: .gitignore  CMakeLists.txt  PHASE3_PLAN.md  matching_cost_vs_k.csv  profile_workload.py  timing_memory.csv  work_distribution.csv
g2g/: __init__.py  decompose.py  sequence.py  types.py
include/g2g/: align.hpp  anchor.hpp  decompose.hpp  graph.hpp  io.hpp  lapjv.hpp  matching.hpp  parallel.hpp  sequence.hpp  types.hpp
python/: synth_generator.py
python/g2g/: README.md  align.py  demo.py  graph.py  report.py
results/: matching_cost_vs_k.csv  timing_memory.csv  work_distribution.csv
slurm/scripts/: README.md  exp3_throughput.sh  exp4_parallel_scaling.sh  exp5_ablation.sh  setup_cluster.sh
slurm/synth/: gen_scaling_gfa.py
src/: align.cpp  anchor.cpp  decompose.cpp  graph.cpp  io.cpp  main.cpp  matching.cpp  parallel.cpp  sequence.cpp
tests/: CMakeLists.txt  test_align.cpp  test_decompose.cpp  test_io.cpp  test_matching.cpp  test_parallel.cpp  test_phase5_exp1_synthetic_gt.cpp  test_phase5_exp2_minimap2.cpp  test_sequence.cpp
